--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,9 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^6.0"
+        "php": "^7.2",
+        "illuminate/support": "^6.0|^7.0",
+        "illuminate/http": "^6.0|^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
