--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^6.0|^7.0",
-        "illuminate/database": "^6.0|^7.0",
-        "illuminate/http": "^6.0|^7.0"
+        "illuminate/support": "^7.0",
+        "illuminate/database": "^7.0",
+        "illuminate/http": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
