--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/database": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0"
+        "php": ">=8.1",
+        "illuminate/database": ">=10.0",
+        "illuminate/support": ">=10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": ">=7.0",
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
