--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "illuminate/support": ">=10.0"
     },
     "require-dev": {
-        "orchestra/testbench": ">=7.0",
-        "phpunit/phpunit": "^9.4"
+        "orchestra/testbench": "^8.0",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
